Fix navbar color

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -11,5 +11,6 @@
         <item name="bootSplashBackground">@color/blue100</item>
         <item adjustViewBounds="true" name="bootSplashLogo">@mipmap/bootsplash_logo</item>
         <item name="postBootSplashTheme">@style/AppTheme</item>
+        <item name="darkContentBarsStyle">false</item>
     </style>
 </resources>
